# libaiff

./: .gitignore  CMakeLists.txt  aifx.c  configure  configure.ac  extended.c  float32.c  g711.c  iff.c  libaiff.c  lpcm.c  private.h
libaiff/: config.h.in  endian.h  libaiff.h
